--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -57,6 +57,12 @@ p {
   text-align: center; 
 }
 
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
 // Positioning
 .center-block {
   display: block;
